@@ -191,15 +191,23 @@ return [
                 'destination'   => 'lorem',
                 'type'          => 'module',
             ],
-        ],
-        'plugins' => [
             [
                 'slug'          => 'BicanMarianValeriu/wca-scrolltop',
                 'title'         => esc_html__( 'WCA: Scroll Top', 'wecodeart' ),
                 'description'   => esc_html__( 'Lightweight extension for adding a scroll to top button on your site. Super flexible and customizable.', 'wecodeart' ),
+                'more'          => 'https://github.com/BicanMarianValeriu/wca-scrolltop/',
+                'source'        => 'github',
+                'destination'   => 'scrolltop',
+                'type'          => 'module',
+            ],
+        ],
+        'plugins' => [
+            [
+                'slug'          => 'BicanMarianValeriu/wca-scrolltop-plugin',
+                'title'         => esc_html__( 'WCA: Scroll Top', 'wecodeart' ) . ' (deprecated)',
+                'description'   => esc_html__( 'Lightweight extension for adding a scroll to top button on your site. Super flexible and customizable.', 'wecodeart' ),
                 'source'        => 'github',
                 'more'          => 'https://github.com/BicanMarianValeriu/wca-scrolltop/',
-                'recommended'   => true,
             ],
         ],
         'themes' => [
